# niche

./: .env.example  .gitignore  README.md  pyproject.toml
setup/: create-mistral-model.sh  mistral-model-file
src/niche/: crew.py  main.py
src/niche/config/: agents.yaml  tasks.yaml
src/niche/tools/: DataForSEOTools.py  SerperDevTools.py  TavilyTools.py
